# eracun_validator

./: .gitignore  README.md  __init__.py  __main__.py  config.py  pyproject.toml
asset_builder/: __init__.py  base.py  cli.py  config.py  java.py  samples.py  schematron.py  utils.py  xsd.py
docs/architecture/: arch_validator.md
docs/architecture/validator/: ARCH_CORE.md  ARCH_POLICY_LAYER.md  ARCH_SCHEMATRON.md  DEV_NOTES_VALIDATOR.md  caching.md  profiles.md  xsd.md
docs/assets/: assets.md  assets_manual.md  assets_structure.md
docs/diagrams/: add-profile.diagram.md  validation-sequence.md
readme/: CLI.md  README.md
validator/: __init__.py  cli.py  core.py  profiles.py  result.py  schematron.py  xsd.py
